# sysinfo

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  ppc64le.dockerfile
.github/workflows/: cross.yaml
cmake/: version.hpp.in
scripts/: dockerConfigureBuild.sh
